--- a/S10ERP_2018.Frontend_Alerta_Kardex_Ceros_y_Negativos/S10ERP_2018.Frontend_Alerta_Kardex_Ceros_y_Negativos.csproj
+++ b/S10ERP_2018.Frontend_Alerta_Kardex_Ceros_y_Negativos/S10ERP_2018.Frontend_Alerta_Kardex_Ceros_y_Negativos.csproj
@@ -53,6 +53,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Frm_CerosNegativos.resx">
+      <DependentUpon>Frm_CerosNegativos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -74,6 +77,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\S10ERP_2018.Backend_Alerta_v1\S10ERP_2018.Backend_Alerta_v1.csproj">
+      <Project>{D93657E0-61C8-425A-8C31-39489C1A3BB2}</Project>
+      <Name>S10ERP_2018.Backend_Alerta_v1</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
