--- a/S10ERP_2018.Backend_Alerta_v1/S10ERP_2018.Backend_Alerta_v1.csproj
+++ b/S10ERP_2018.Backend_Alerta_v1/S10ERP_2018.Backend_Alerta_v1.csproj
@@ -76,10 +76,12 @@
     <Compile Include="BE_Data\BE_OC_SIn_Aprobars.cs" />
     <Compile Include="BE_Data\BE_Pedido_Sin_Aprobar.cs" />
     <Compile Include="BE_Data\BE_Pedido_Sin_Aprobars.cs" />
+    <Compile Include="BE_Data\BE_Pedido_Sin_Atender.cs" />
     <Compile Include="BE_Data\BE_Resultado_Operativo_C.cs" />
     <Compile Include="BE_Data\BE_Resultado_Operativo_Cs.cs" />
     <Compile Include="BE_Data\BE_Resultado_Operativo_D.cs" />
     <Compile Include="BE_Data\BE_Resultado_Operativo_Ds.cs" />
+    <Compile Include="BE_Data\BE_Pedido_Sin_Atenders.cs" />
     <Compile Include="BL_Implementation\BL_Impl_ETE_ETEP_SeguimientoTransferencia.cs" />
     <Compile Include="BL_Implementation\BL_Impl_ETE_ETEP_SeguimientoTransferenciaGG.cs" />
     <Compile Include="BL_Implementation\BL_Impl_ETE_ETEP_SeguimientoTransferenciaGG_Interface.cs" />
@@ -92,6 +94,8 @@
     <Compile Include="BL_Implementation\BL_Impl_OC_SIn_Aprobar_Interface.cs" />
     <Compile Include="BL_Implementation\BL_Impl_Pedido_Sin_Aprobar.cs" />
     <Compile Include="BL_Implementation\BL_Impl_Pedido_Sin_Aprobar_Interface.cs" />
+    <Compile Include="BL_Implementation\BL_Impl_Pedido_Sin_Atender.cs" />
+    <Compile Include="BL_Implementation\BL_Impl_Pedido_Sin_Atender_Interface.cs" />
     <Compile Include="BL_Implementation\BL_Impl_Resultado_Operativo_C.cs" />
     <Compile Include="BL_Implementation\BL_Impl_Resultado_Operativo_C_Interface.cs" />
     <Compile Include="BL_Implementation\BL_Impl_Resultado_Operativo_D.cs" />
@@ -102,6 +106,7 @@
     <Compile Include="BL_ObjCOntrol\BL_ObjControl_Kardex_Ceros_Negativo.cs" />
     <Compile Include="BL_ObjCOntrol\BL_ObjControl_OC_SIn_Aprobar.cs" />
     <Compile Include="BL_ObjCOntrol\BL_ObjCOntrol_Pedido_Sin_Aprobar.cs" />
+    <Compile Include="BL_ObjCOntrol\BL_ObjCOntrol_Pedido_Sin_Atender.cs" />
     <Compile Include="BL_ObjCOntrol\BL_ObjControl_Resultado_Operativo_C.cs" />
     <Compile Include="BL_ObjCOntrol\BL_ObjControl_Resultado_Operativo_D.cs" />
     <Compile Include="BL_Utils\BL_Utils_ETE_ETEP_SeguimientoTransferencia.cs" />
@@ -110,6 +115,7 @@
     <Compile Include="BL_Utils\BL_Utils_Kardex_Ceros_Negativo.cs" />
     <Compile Include="BL_Utils\BL_Utils_OC_SIn_Aprobar.cs" />
     <Compile Include="BL_Utils\BL_Utils_Pedido_Sin_Aprobar.cs" />
+    <Compile Include="BL_Utils\BL_Utils_Pedido_Sin_Atender.cs" />
     <Compile Include="BL_Utils\BL_Utils_Resultado_Operativo_C.cs" />
     <Compile Include="BL_Utils\BL_Utils_Resultado_Operativo_D.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -123,6 +129,7 @@
     <Content Include="BD_Procedure\S10_Almacenes_001_004_ETE_ETEP_SeguimientoTransferenciaGG.txt" />
     <Content Include="BD_Procedure\S10_Resultado_OperativoC.txt" />
     <Content Include="BD_Procedure\S10_Resultado_OperativoD.txt" />
+    <Content Include="BD_Procedure\S10_Compras_001_003_Pedidos_Por_Atender.txt" />
     <Content Include="BD_View\S10_Almacenes_001_003_ETE_ETEP_Seguimiento.txt" />
     <Content Include="BD_View\S10_Compras_001_001_Pedidos_Por_Aprobar%28AR%29.txt" />
     <Content Include="BD_View\S10_GerenciaRO.txt" />
