--- a/S10ERP_2018.Backend_Alerta_v1/S10ERP_2018.Backend_Alerta_v1.csproj
+++ b/S10ERP_2018.Backend_Alerta_v1/S10ERP_2018.Backend_Alerta_v1.csproj
@@ -64,6 +64,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BE_Data\BE_Auditoria_Empleado.cs" />
+    <Compile Include="BE_Data\BE_Auditoria_Empleados.cs" />
     <Compile Include="BE_Data\BE_Auditoria_Planilla_P.cs" />
     <Compile Include="BE_Data\BE_Auditoria_Planilla_Ps.cs" />
     <Compile Include="BE_Data\BE_Auditoria_Vacaciones_Personal.cs" />
@@ -86,6 +88,8 @@
     <Compile Include="BE_Data\BE_Resultado_Operativo_D.cs" />
     <Compile Include="BE_Data\BE_Resultado_Operativo_Ds.cs" />
     <Compile Include="BE_Data\BE_Pedido_Sin_Atenders.cs" />
+    <Compile Include="BL_Implementation\BL_Impl_Auditoria_Empleado.cs" />
+    <Compile Include="BL_Implementation\BL_Impl_Auditoria_Empleado_Interface.cs" />
     <Compile Include="BL_Implementation\BL_Impl_Auditoria_Planilla_P.cs" />
     <Compile Include="BL_Implementation\BL_Impl_Auditoria_Planilla_P_Interface.cs" />
     <Compile Include="BL_Implementation\BL_Impl_Auditoria_Vacaciones_Personal.cs" />
@@ -108,6 +112,7 @@
     <Compile Include="BL_Implementation\BL_Impl_Resultado_Operativo_C_Interface.cs" />
     <Compile Include="BL_Implementation\BL_Impl_Resultado_Operativo_D.cs" />
     <Compile Include="BL_Implementation\BL_Impl_Resultado_Operativo_D_Interface.cs" />
+    <Compile Include="BL_ObjCOntrol\BL_ObjControl_Auditoria_Empleado.cs" />
     <Compile Include="BL_ObjCOntrol\BL_ObjControl_Auditoria_Planilla_P.cs" />
     <Compile Include="BL_ObjCOntrol\BL_ObjControl_Auditoria_Vacaciones_Personal.cs" />
     <Compile Include="BL_ObjCOntrol\BL_ObjControl_ETE_ETEP_SeguimientoTransferencia.cs" />
@@ -119,6 +124,7 @@
     <Compile Include="BL_ObjCOntrol\BL_ObjCOntrol_Pedido_Sin_Atender.cs" />
     <Compile Include="BL_ObjCOntrol\BL_ObjControl_Resultado_Operativo_C.cs" />
     <Compile Include="BL_ObjCOntrol\BL_ObjControl_Resultado_Operativo_D.cs" />
+    <Compile Include="BL_Utils\BL_Utils_Auditoria_Empleado.cs" />
     <Compile Include="BL_Utils\BL_Utils_Auditoria_Planilla_P.cs" />
     <Compile Include="BL_Utils\BL_Utils_Auditoria_Vacaciones_Personal.cs" />
     <Compile Include="BL_Utils\BL_Utils_ETE_ETEP_SeguimientoTransferencia.cs" />
@@ -147,6 +153,8 @@
     <Content Include="BD_Procedure\S10_Auditoria_Vacaciones_Personal.txt" />
     <Content Include="BD_Procedure\S10_Table_Tmp_Auditoria_Vacaciones_Personal.txt" />
     <Content Include="BD_Procedure\S10_Alerta_Auditoria_Pedido_Trigger.txt" />
+    <Content Include="BD_Procedure\S10_Alerta_Auditoria_Empleado_Trigger.txt" />
+    <Content Include="BD_Procedure\S10_Alerta_Auditoria_Empleado.txt" />
     <Content Include="BD_View\S10_Almacenes_001_003_ETE_ETEP_Seguimiento.txt" />
     <Content Include="BD_View\S10_Compras_001_001_Pedidos_Por_Aprobar%28AR%29.txt" />
     <Content Include="BD_View\S10_GerenciaRO.txt" />
